Bug 1575220 - Show breach notification icons in high contrast mode. r=MattN
Differential Revision: https://phabricator.services.mozilla.com/D47530

UltraBlame original commit: 0f0a614850991f09f045a111f99f41ec7fba54fc

--- a/browser/components/aboutlogins/content/components/login-item.css
+++ b/browser/components/aboutlogins/content/components/login-item.css
@@ -1807,70 +1807,10 @@ yellow
 10
 )
 ;
-background
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-warning
-.
-svg
-"
-)
-;
-background
--
-repeat
-:
-no
--
-repeat
-;
-background
--
-position
-:
-left
-10px
-top
-10px
-;
 color
 :
 #
 0C0C0D
-;
--
-moz
--
-context
--
-properties
-:
-fill
-;
-fill
-:
-var
-(
--
--
-red
--
-90
-)
 ;
 box
 -
@@ -1950,27 +1890,6 @@ relative
 breach
 -
 alert
-:
-dir
-(
-rtl
-)
-{
-background
--
-position
-:
-right
-10px
-top
-10px
-;
-}
-a
-.
-breach
--
-alert
 -
 link
 {
@@ -1989,6 +1908,52 @@ font
 weight
 :
 500
+;
+}
+.
+breach
+-
+icon
+{
+position
+:
+absolute
+;
+inset
+-
+block
+-
+start
+:
+10px
+;
+inset
+-
+inline
+-
+start
+:
+10px
+;
+-
+moz
+-
+context
+-
+properties
+:
+fill
+;
+fill
+:
+var
+(
+-
+-
+red
+-
+90
+)
 ;
 }
 .
@@ -2014,77 +1979,6 @@ position
 :
 absolute
 ;
-background
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-close
-.
-svg
-"
-)
-;
-background
--
-repeat
-:
-no
--
-repeat
-;
-background
--
-size
-:
-contain
-;
-min
--
-height
-:
-16px
-;
-min
--
-width
-:
-16px
-;
--
-moz
--
-context
--
-properties
-:
-fill
-fill
--
-opacity
-;
-fill
--
-opacity
-:
-0
-;
-fill
-:
-currentColor
-;
 inset
 -
 inline
@@ -2100,6 +1994,24 @@ block
 start
 :
 12px
+;
+min
+-
+width
+:
+auto
+;
+min
+-
+height
+:
+auto
+;
+line
+-
+height
+:
+0
 ;
 }
 .
@@ -2122,6 +2034,46 @@ background
 color
 :
 transparent
+;
+}
+.
+dismiss
+-
+breach
+-
+alert
+-
+icon
+{
+-
+moz
+-
+context
+-
+properties
+:
+fill
+fill
+-
+opacity
+;
+fill
+-
+opacity
+:
+0
+;
+fill
+:
+currentColor
+;
+width
+:
+16px
+;
+height
+:
+16px
 ;
 }
 .
@@ -2307,6 +2259,31 @@ weight
 :
 600
 ;
+}
+media
+(
+-
+moz
+-
+windows
+-
+default
+-
+theme
+:
+0
+)
+{
+.
+breach
+-
+icon
+{
+fill
+:
+currentColor
+;
+}
 }
 supports
 -
