--- a/browser/components/aboutlogins/content/components/login-list.css
+++ b/browser/components/aboutlogins/content/components/login-list.css
@@ -1075,9 +1075,6 @@ none
 ;
 }
 .
-breached
->
-.
 list
 -
 item
@@ -1120,6 +1117,35 @@ start
 :
 12px
 ;
+}
+media
+(
+-
+moz
+-
+windows
+-
+default
+-
+theme
+:
+0
+)
+{
+.
+list
+-
+item
+-
+warning
+-
+icon
+{
+fill
+:
+currentColor
+;
+}
 }
 supports
 -
